some final changes
i think it might be ready to submit by now

--- a/Article.html
+++ b/Article.html
@@ -146,14 +146,11 @@
         </div>
         <hr>
         <!-- Zero Day Exploits  -->
-        <div class="ZeroDayExploits conatiner-fluid" id="section-3">
+        <div class="ZeroDayExploits container-fluid" id="section-3">
             <h2>Zero-Day Exploits: “You can’t know what you can’t know”</h2>
             <br>
             <div class="card mb-3" style="max-height:fit-content">
                 <div class="row g-0">
-                    <div class="col-md-4">
-                        <img src="ZeroDayLifecycle.png" class="img-fluid rounded-start ZeroDayImg" alt="...">
-                    </div>
                     <div class="col-md-8">
                         <div class="card-body">
                             <h5 class="card-title">Zero Day Exploits</h5>
@@ -175,6 +172,9 @@
                                     class="btn btn-primary">Read More About Zero Day Exploits/Vulnerabilities</a>
                             </div>
                         </div>
+                    </div>
+                    <div class="col-md-4">
+                        <img src="ZeroDayLifecycle.png" class="img-fluid rounded-start ZeroDayImg" alt="...">
                     </div>
                 </div>
             </div>
@@ -313,7 +313,7 @@
         <hr>
 
         <!-- Modern Cybersecurity Measures -->
-        <div class="ModernCybersecurityStandards" id="section-7">
+        <div class="ModernCybersecurityMeasures" id="section-7">
             <h2>Modern Cybersecurity Measures</h2>
             <br>
             <div class="row row-cols-1 row-cols-md-4 g-4 mb-4">
@@ -1052,30 +1052,60 @@
         <!-- Industry Standards for Cybersecurity  -->
         <div class="CybersecurityStandards" id="section-8">
             <h2>Industry Standards for Cybersecurity</h2>
-            <h3>NIST (National Institute of Science and Technology) Standard:</h3>
-            <ul>
-                <li>Identify</li>
-                <li>Protect</li>
-                <li>Detect</li>
-                <li>Respond</li>
-                <li>Recover</li>
-            </ul>
-            <hr>
-            <h2>ISO/IEC 27001 (Information Security Management Systems) Standard</h2>
-            <ul>
-                <li>Systematically examine the organization's information security risks, taking account of the threats,
-                    vulnerabilities,
-                    and impacts;</li>
-                <li>Design and implement a coherent and comprehensive suite of information security controls and/or
-                    other forms of risk
-                    treatment (such as risk avoidance or risk transfer) to address those risks that are deemed
-                    unacceptable; and</li>
-                <li>Adopt an overarching management process to ensure that the information security controls continue to
-                    meet the
-                    organization's information security needs on an ongoing basis.</li>
-            </ul>
+            <br>
+                <p>
+                    Some common standards regarding cybersecurity frameworks are the NIST and ISO/IEC. These frameworks play a critical role in ensuring that organizations
+                    have the necessary tools and guidance to protect themselves against cyber threats, while also promoting consistency and interoperability 
+                    across different systems and sectors. Most companies adhere to and teach these standards in order to demonstrate to customers, partners, and other stakeholders
+                    that they are taking cybersecurity seriously and are committed to protecting their sensitive data and systems from cyber threats.
+                </p>
+            <br>
+            <div class="container-fluid row" style="align-content:space-between">
+                <!-- NIST Standards -->
+                <div class="col">
+                    <div class="card" style="height:100%; max-width: 75%">
+                        <div class="card-header">
+                            <h3>NIST (National Institute of Science and Technology) Standard:</h3>
+                        </div>
+                        <img class="card-img-top" src="NISTstandard.png" alt="">
+                        <div class="card-body">
+                            <ul class="list-group list-group-flush">
+                            <li class="list-group-item"><strong>Identify</strong> potential threats</li>
+                            <li class="list-group-item"><strong>Protect</strong> and secure critical systems</li>
+                            <li class="list-group-item"><strong>Detect</strong> (proactively) potential vulnerabilities and existing threats</li>
+                            <li class="list-group-item"><strong>Respond</strong> to any potential threat and mitigate damage to critical systems</li>
+                            <li class="list-group-item"><strong>Recover</strong> any damaged systems or operations to baseline level</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <!-- ISO/IEC Standards -->
+                <div class="col">
+                    <div class="card" style="height:100%; max-width: 75%;">
+                        <div class="card-header">
+                            <h3>ISO/IEC 27001 (Information Security Management Systems) Standard</h3>
+                        </div>
+                        <img class="card-img-top " style="" src="iso27001standard.jpg" alt="">
+                        <div class="card-body">
+                        <ul class="list-group list-group-flush">
+                        <li class="list-group-item">Systematically examine the organization's information security risks, taking account of the threats,
+                            vulnerabilities,
+                            and impacts;</li>
+                        <li class="list-group-item">Design and implement a coherent and comprehensive suite of information security controls and/or
+                            other forms of risk
+                            treatment (such as risk avoidance or risk transfer) to address those risks that are deemed
+                            unacceptable; and</li>
+                        <li class="list-group-item">Adopt an overarching management process to ensure that the information security controls continue to
+                            meet the
+                            organization's information security needs on an ongoing basis.</li>
+                        </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         <hr>
+        <!-- Sources -->
         <div class="Sources" id="section-10">
             <embed class="pdf-container" src="Works Cited.pdf" width="900" height="900" />
         </div>
