fixed TOC, fixed whyOS section, added an image

--- a/Article.html
+++ b/Article.html
@@ -74,7 +74,7 @@
                 <li><a href="#section-6">Examples of Real World Cybersecurity attacks/vulnerabilities</a></li>
                 <li><a href="#section-7">Modern Day Standards for Cybersecurity</a></li>
                 <li><a href="#section-8">Industry Standards for Cybersecurity</a></li>
-                <li><a href="#section-9">ISO/IEC 27001 (Information Security Management Systems) Standard</a></li>
+                <li><a href="#section-8">ISO/IEC 27001 (Information Security Management Systems) Standard</a></li>
                 <li><a href="#section-10">Sources</a></li>
             </ul>
         </div>
@@ -230,7 +230,9 @@
                 debilitating to the victim. A successful attack can result in financial loss (ransom/ransomware), loss
                 of confidential
                 data (malware/virus), and reputational damage arising from system crashes and operation downtimes.</p>
-            <p>More content for Section One can be added here.</p>
+            <div style="text-align:center;">
+                <img src="operating systems.webp" alt="operating systems image" style="width:50%;height:50%;">
+            </div>
         </div>
         <hr>
         <!-- Real World Cyber Attacks/Vulnerabilities -->
@@ -1053,12 +1055,16 @@
         <div class="CybersecurityStandards" id="section-8">
             <h2>Industry Standards for Cybersecurity</h2>
             <br>
-                <p>
-                    Some common standards regarding cybersecurity frameworks are the NIST and ISO/IEC. These frameworks play a critical role in ensuring that organizations
-                    have the necessary tools and guidance to protect themselves against cyber threats, while also promoting consistency and interoperability 
-                    across different systems and sectors. Most companies adhere to and teach these standards in order to demonstrate to customers, partners, and other stakeholders
-                    that they are taking cybersecurity seriously and are committed to protecting their sensitive data and systems from cyber threats.
-                </p>
+            <p>
+                Some common standards regarding cybersecurity frameworks are the NIST and ISO/IEC. These frameworks play
+                a critical role in ensuring that organizations
+                have the necessary tools and guidance to protect themselves against cyber threats, while also promoting
+                consistency and interoperability
+                across different systems and sectors. Most companies adhere to and teach these standards in order to
+                demonstrate to customers, partners, and other stakeholders
+                that they are taking cybersecurity seriously and are committed to protecting their sensitive data and
+                systems from cyber threats.
+            </p>
             <br>
             <div class="container-fluid row" style="align-content:space-between">
                 <!-- NIST Standards -->
@@ -1070,11 +1076,14 @@
                         <img class="card-img-top" src="NISTstandard.png" alt="">
                         <div class="card-body">
                             <ul class="list-group list-group-flush">
-                            <li class="list-group-item"><strong>Identify</strong> potential threats</li>
-                            <li class="list-group-item"><strong>Protect</strong> and secure critical systems</li>
-                            <li class="list-group-item"><strong>Detect</strong> (proactively) potential vulnerabilities and existing threats</li>
-                            <li class="list-group-item"><strong>Respond</strong> to any potential threat and mitigate damage to critical systems</li>
-                            <li class="list-group-item"><strong>Recover</strong> any damaged systems or operations to baseline level</li>
+                                <li class="list-group-item"><strong>Identify</strong> potential threats</li>
+                                <li class="list-group-item"><strong>Protect</strong> and secure critical systems</li>
+                                <li class="list-group-item"><strong>Detect</strong> (proactively) potential
+                                    vulnerabilities and existing threats</li>
+                                <li class="list-group-item"><strong>Respond</strong> to any potential threat and
+                                    mitigate damage to critical systems</li>
+                                <li class="list-group-item"><strong>Recover</strong> any damaged systems or operations
+                                    to baseline level</li>
                             </ul>
                         </div>
                     </div>
@@ -1087,18 +1096,22 @@
                         </div>
                         <img class="card-img-top " style="" src="iso27001standard.jpg" alt="">
                         <div class="card-body">
-                        <ul class="list-group list-group-flush">
-                        <li class="list-group-item">Systematically examine the organization's information security risks, taking account of the threats,
-                            vulnerabilities,
-                            and impacts;</li>
-                        <li class="list-group-item">Design and implement a coherent and comprehensive suite of information security controls and/or
-                            other forms of risk
-                            treatment (such as risk avoidance or risk transfer) to address those risks that are deemed
-                            unacceptable; and</li>
-                        <li class="list-group-item">Adopt an overarching management process to ensure that the information security controls continue to
-                            meet the
-                            organization's information security needs on an ongoing basis.</li>
-                        </ul>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item">Systematically examine the organization's information
+                                    security risks, taking account of the threats,
+                                    vulnerabilities,
+                                    and impacts;</li>
+                                <li class="list-group-item">Design and implement a coherent and comprehensive suite of
+                                    information security controls and/or
+                                    other forms of risk
+                                    treatment (such as risk avoidance or risk transfer) to address those risks that are
+                                    deemed
+                                    unacceptable; and</li>
+                                <li class="list-group-item">Adopt an overarching management process to ensure that the
+                                    information security controls continue to
+                                    meet the
+                                    organization's information security needs on an ongoing basis.</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
