added changes to index.html

--- a/Article.html
+++ b/Article.html
@@ -3,6 +3,43 @@
 <!DOCTYPE html>
 
 <head>
+    <style>
+        /* Styles for the navigation bar */
+        nav {
+            text-align: center;
+            /* Center align the navigation links */
+            margin-top: 20px;
+            /* Adds some space at the top */
+        }
+
+        nav a {
+            display: inline-block;
+            /* Allows width and height to be set */
+            width: 200px;
+            /* Width of the button */
+            padding: 10px;
+            /* Padding inside the button */
+            font-size: 20px;
+            /* Size of the text */
+            text-decoration: none;
+            /* Removes underline from the link */
+            color: white;
+            /* Text color */
+            background-color: blue;
+            /* Background color */
+            border: none;
+            /* Removes border */
+            border-radius: 5px;
+            /* Rounded corners */
+            cursor: pointer;
+            /* Cursor changes to pointer on hover */
+        }
+
+        nav a:hover {
+            background-color: darkblue;
+            /* Changes background on hover */
+        }
+    </style>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -51,6 +88,10 @@
         <a href="#section-7">Standards for Cybersecurity</a></li>
         <a href="#section-10">Sources</a></li>
     </div> -->
+
+    <nav>
+        <a href="./index.html">Next Page</a>
+    </nav>
 
     <div class="container-fluid parent">
         <!-- Title Header -->
@@ -231,7 +272,7 @@
                 of confidential
                 data (malware/virus), and reputational damage arising from system crashes and operation downtimes.</p>
             <div style="text-align:center;">
-                <img src="operating systems.webp" alt="operating systems image" style="width:50%;height:50%;">
+                <img src="operating systems.webp" alt="operating systems image" style="width:30%;height:30%;">
             </div>
         </div>
         <hr>
