added more changes to index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
     <nav>
         <a href="./Article.html">Home Page</a>
-        Here are some changes that I have just pushed
+        Here are some changes that I have just pushed.
+
+        I have just added some more new changes to the website
     </nav>
 </body>
 
