--- a/Article.html
+++ b/Article.html
@@ -96,7 +96,7 @@
     <div class="container-fluid parent">
         <!-- Title Header -->
         <div class="TitleHeader">
-            <h1 id="top">The Necessity of Operating System Security: OS Zero Day Exploits</h1>
+            <h1 id="top">The Necessity of Operating System Security: OS Zero Day and one Exploits</h1>
             <p>By Alex Gomex and Andrew Chian</p>
         </div>
         <!-- Title Line Break -->
